--- a/Views/layouts/login.handlebars
+++ b/Views/layouts/login.handlebars
@@ -10,4 +10,4 @@
   
   <button type="submit">Login</button>
 </form>
-<p>Don't have an account? <a href="/signup">Sign up here</a></p>
+<p>Don't have an account? <a href="./views/signup">Sign up here</a></p>
