--- a/Views/signup.handlebars
+++ b/Views/signup.handlebars
@@ -10,4 +10,4 @@
   
   <button type="submit">Sign Up</button>
 </form>
-<p>Already have an account? <a href="/login">Log in here</a></p>
+<p>Already have an account? <a href="./layouts/login.handlebars">Log in here</a></p>
