--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TuneTrove</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body>
   {{{ body }}}
-  <script src="/js/script.js"></script>
+  <script src="/public/js/script.js"></script>
 </body>
 </html>
