--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,4 +11,24 @@
   {{{ body }}}
   <script src="/js/script.js"></script>
 </body>
+</html> --}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TuneTrove</title>
+  <link rel="stlyesheeet" href="/css/style.css">
+</head>
+<body>
+  <nav>
+    <div>
+      <a href="/login-signup">Login / Signup</a>
+    </div>
+  </nav>
+  <div class="container">
+    <h1>TuneTrove</h1>
+    {{{ body }}}
+  </div>
+  <script src="js/index.js"></script>
 </html>
