--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -18,7 +18,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TuneTrove</title>
-  <link rel="stlyesheeet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <nav>
