--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -19,15 +19,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TuneTrove</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <div>
+<nav>
+  <div class="nav-container">
+    <div class="logo">
+      <a href="/">TuneTrove</a>
+    </div>
+    <div class="links">
       <a href="/login-signup">Login / Signup</a>
     </div>
+  </div>
   </nav>
   <div class="container">
-    <h1>TuneTrove</h1>
     {{{ body }}}
   </div>
   <script src="js/index.js"></script>
