added review form page

--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -23,11 +23,11 @@
 <body>
   <nav>
     <div>
-      <a href="/login-signup">Login / Signup</a>
+      <button><a href="../login-signup.handlebars">Login/Signup</a></button>
     </div>
   </nav>
   <div class="container">
-    <h1>TuneTrove</h1>
+    <div class="titleofpage"><h1>TuneTrove</h1></div>
     {{{ body }}}
   </div>
   <script src="js/index.js"></script>
