--- a/Views/reviews.handlebars
+++ b/Views/reviews.handlebars
@@ -13,17 +13,7 @@
     {{/each}}
   </ul>
 {{else}}
-  <p>No reviews found for this album.</p>
+  <p>No reviews found for this album......</p>
+  <a href="./albumspecificreview.handlebars">Click Here To Add One!</a>
 {{/if}}
 
-<h2>Add Your Review</h2>
-<form id='review-form'>
-  <input type='hidden' id='album-id' value='{{album.id}}' />
-  <label for='rating'>Rating (1-10):</label>
-  <input type='number' id='rating' name='rating' min='1' max='10' required />
-  <br />
-  <label for='review-text'>Review:</label>
-  <textarea id='review-text' name='review-text' rows='4' cols='50'></textarea>
-  <br />
-  <input type='submit' value='Submit Review' />
-</form>
