--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,12 +7,15 @@
 
 /* Typography */
 body {
-  font-family: Arial, sans-serif;
+  font-family: monospace, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  background-color:black;
 }
 
-h1,
+h1 {
+  color: aliceblue;
+}, 
 h2,
 h3,
 h4,
@@ -63,12 +66,13 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  border-color: #0056b3;
 }
+
 
 /* Links */
 a {
-  color: #007bff;
+  color: black;
   text-decoration: none;
 }
 
@@ -90,4 +94,17 @@ ul {
 
 li {
   margin-bottom: 0.5rem;
+}
+
+nav {
+  background-color: black;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.titleofpage {
+  display:flex;
+  justify-content: center;
+  font-family: monospace;
+  color:aqua;
 }
