--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -27,9 +27,13 @@
     <div class="logo">
       <a href="/">TuneTrove</a>
     </div>
+    {{#if logged_in}}
+    <button class="no-button" id="logout">Logout</button>
+    {{else}}
     <div class="links">
-      <a href="/login-signup">Login / Signup</a>
+      <a href="/login">Login / Signup</a>
     </div>
+    {{/if}}
   </div>
   </nav>
   <div class="container">
