--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,11 @@ p {
   padding: 1rem;
 }
 
+/* Links */
+a {
+  text-decoration: none;
+}
+
 /* Forms */
 form {
   display: flex;
@@ -60,27 +65,6 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-}
-
-/* Links */
-a {
-  text-decoration: none;
-}
-
-/* Error message */
-.error {
-  color: red;
-  margin-bottom: 1rem;
-}
-
-/* Lists */
-ul {
-  list-style-type: none;
-  margin-bottom: 1rem;
-}
-
-li {
-  margin-bottom: 0.5rem;
 }
 
 /* Nav bar */
@@ -115,4 +99,74 @@ nav {
   font-weight: bold;
   color: #fff;
   margin-left: 20px;
+}
+
+.no-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: #1b89bc;
+  text-decoration: none;
+  font-size: 100%;
+}
+
+/* Cards */
+.album-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.album-card {
+  background: linear-gradient(to bottom left, #fce2ad, #f99f86);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin: 10px;
+  padding: 10px;
+  width: 300px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+.album-card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.1);
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.album-card:hover:before {
+  opacity: 1;
+}
+
+.album-title {
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  color: #333;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.artist-name, .album-genre {
+  margin: 5px;
+  font-size: 16px;
+  color: #666;
+  font-weight: bold;
 }
