--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -19,15 +19,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TuneTrove</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <div>
-      <button><a href="../login-signup.handlebars">Login/Signup</a></button>
+<nav>
+  <div class="nav-container">
+    <div class="logo">
+      <a href="/">TuneTrove</a>
     </div>
+    {{#if logged_in}}
+    <button class="no-button" id="logout">Logout</button>
+    {{else}}
+    <div class="links">
+      <a href="/login">Login / Signup</a>
+    </div>
+    {{/if}}
+  </div>
   </nav>
   <div class="container">
-    <div class="titleofpage"><h1>TuneTrove</h1></div>
     {{{ body }}}
   </div>
   <script src="js/index.js"></script>
