--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -23,7 +23,7 @@
 <body>
   <nav>
     <div>
-      <button><a href="../login-signup.handlebars">Login/Signup</a></button>
+      <button><a href="/login-signup">Login/Signup</a></button>
     </div>
   </nav>
   <div class="container">
