--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -31,7 +31,7 @@
     <button class="no-button" id="logout">Logout</button>
     {{else}}
     <div class="links">
-      <a href="/login">Login / Signup</a>
+      <a href="/user/login-signup">Login / Signup</a>
     </div>
     {{/if}}
   </div>
