made a lot of changes to several files of the code, reviews are now rendering to the bottom of the page, need to create one more handlebar page, corresponding js and create the routes for that page

--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -39,5 +39,5 @@
   <div class="container">
     {{{ body }}}
   </div>
-  <script src="js/index.js"></script>
+  <script src="/js/index.js"></script>
 </html>
