--- a/Views/albumspecificreview.handlebars
+++ b/Views/albumspecificreview.handlebars
@@ -5,10 +5,22 @@
 <form id='review-form'>
   <input type='hidden' id='album-id' value='{{album.id}}' />
   <label for='rating'>Rating (1-10):</label>
-  <input type='number' id='rating' name='rating' min='1' max='10' required />
+  <input type='number' id='rating' name='rating' min='1' value='5' max='10' required />
   <br />
   <label for='review-text'>Review:</label>
   <textarea id='review-text' name='review-text' rows='4' cols='50'></textarea>
   <br />
   <input type='submit' value='Submit Review' />
 </form>
+
+{{#each reviews}}
+  <div class='review'>
+    <h3><a href='/review/edits/{{this.id}}'> {{this.user.username}}'s Review</a></h3>
+    <p>Rating: {{this.rating}}</p>
+    <p>{{this.review_text}}</p>
+  </div>
+{{/each}}
+<script>const user_id = {{{user_id}}}</script>
+<script src='/js/reviews.js'></script>
+
+/////// set up route /////create handlebars page ///////// create javascript page
