--- a/Views/login-signup.handlebars
+++ b/Views/login-signup.handlebars
@@ -1,4 +1,4 @@
-<h1>Login / Signup</h1>
+{{! <h1>Login / Signup</h1>
 
 <div class='form-container'>
   <div class='login-form'>
@@ -27,3 +27,38 @@
     </form>
   </div>
 </div>
+
+<script src='/js/login.js'></script> }}
+
+<h1>Login / Signup</h1>
+
+<div class='form-container'>
+  <div>
+    <h2>Login</h2>
+    <form class='login-form'>
+      <label for='username-login'>Username</label>
+      <input type='text' id='username-login' name='username' required />
+
+      <label for='password-login'>Password</label>
+      <input type='password' id='password-login' name='password' required />
+
+      <input type='submit' value='Login' />
+    </form>
+  </div>
+
+  <div>
+    <h2>Signup</h2>
+    <form class='signup-form'>
+
+      <label for='username-signup'>Username</label>
+      <input type='text' id='username-signup' name='username' required />
+
+      <label for='password-signup'>Password</label>
+      <input type='password' id='password-signup' name='password' required />
+
+      <input type='submit' value='Signup' />
+    </form>
+  </div>
+</div>
+
+<script src='/js/login.js'></script>
